kndis/infra/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kndis
  labels:
    name: kndis
    app.kubernetes.io/name: kndis
    app.kubernetes.io/component: namespace
